--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <footer class="footer">
     <nav class="category-nav">
-        <button class="category-btn ">Starter</button>
+        <button class="category-btn active">Starter</button>
         <button class="category-btn">Main Course</button>
         <button class="category-btn">Drinks</button>
         <button class="category-btn">Desserts</button>
